syntax = "proto3";

option go_package = "./proto";

package user;

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool Married = 6;
}

service UserService {
  rpc GetUserById (UserRequest) returns (User);
  rpc GetUsersByIds (UsersRequest) returns (stream User);
}

message UserRequest {
  int32 id = 1;
}

message UsersRequest {
  repeated int32 ids = 1;
}
